--- a/assignment2-starter-code/index.html
+++ b/assignment2-starter-code/index.html
@@ -46,7 +46,7 @@
 
 		<!-- Already Bought List -->
 		<div class="col-md-6" ng-controller='AlreadyBoughtController as boughtCtrl'>
-			 <h2 ng-if="boughtCtrl.items.length">Already Bought:</h2>
+			 <h2>Already Bought:</h2>
 			 <ul ng-repeat="item in boughtCtrl.items">
 			   <li>Bought {{item.quantity}}  {{item.name}}</li>
 			 </ul>
