--- a/assignment3-starter-code/index.html
+++ b/assignment3-starter-code/index.html
@@ -1,35 +1,27 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>Narrow Down Your Menu Choice</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/styles.css">
-    <script src="angular.min.js"></script>
-    <script src="app.js"></script>
-
-  </head>
-<body>
-   <div class="container" ng-app="NarrowItDownApp">
-    <h1>Narrow Down Your Chinese Menu Choice</h1>
-		<div ng-controller="NarrowItDownController as narrow"></div>
-		
-		 <li ng-repeat="category in narrow.categories">
-          (<a href="" ng-click="menu.logMenuItems(category.short_name);">{{ category.short_name }}</a>)
-          {{ category.name }}
-        </li>
-		
-			<div class="form-group">
-			  <input type="text" placeholder="search term" class="form-control">
+	<head>
+		<title>Narrow Down Your Menu Choice</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="styles/bootstrap.min.css">
+		<link rel="stylesheet" href="styles/styles.css">
+		<script src="angular.min.js"></script>
+		<script src="app.js"></script>
+	</head>
+	<body>
+		<div class="container" ng-app="NarrowItDownApp">
+			<h1>Narrow Down Your Chinese Menu Choice</h1>
+			<div ng-controller="NarrowItDownController as menuCtrl">
+				<div class="form-group">
+					<input type="text" placeholder="search term" class="form-control" ng-model="menuCtrl.menuItem">
+				</div>
+				<div class="form-group narrow-button">
+					<button class="btn btn-primary" ng-click="menuCtrl.checkIsInMenu()">Narrow It Down For Me!</button>
+				</div>
+				<!-- found-items should be implemented as a component -->
+				<!-- <found-items found-items="...." on-remove="...."></found-items> -->
 			</div>
-			<div class="form-group narrow-button">
-			  <button class="btn btn-primary" ng-click="getMatchedMenuItems()">Narrow It Down For Me!</button>
-			</div>
-
-			<!-- found-items should be implemented as a component -->
-			<found-items found-items="...." on-remove="...."></found-items>
+			
 		</div>
-  </div>
-
-</body>
+	</body>
 </html>
