--- a/assignment3-starter-code/index.html
+++ b/assignment3-starter-code/index.html
@@ -18,10 +18,15 @@
 				<div class="form-group narrow-button">
 					<button class="btn btn-primary" ng-click="menuCtrl.checkIsInMenu()">Narrow It Down For Me!</button>
 				</div>
+				<br/><br/><br/><br/>
+				<ul>
+					<li ng-repeat="item in menuCtrl.foundItems track by $index">
+						{{ item }}
+					</li>
+				</ul>
+				<hr/>
 				<!-- found-items should be implemented as a component -->
-				<!-- <found-items found-items="...." on-remove="...."></found-items> -->
-			</div>
-			
+				<found-items found-items="menuCtrl.foundItems"></found-items>		
 		</div>
 	</body>
 </html>
