--- a/assignment3-starter-code/foundItems.html
+++ b/assignment3-starter-code/foundItems.html
@@ -1,3 +1,21 @@
-  <li>
-    {{ item }}
-  </li>
+<ul>
+    <li ng-repeat="item in list.items">
+        <table>
+            <tr>
+                <td><strong>Name</strong>: {{item.name}}</td>
+                <td rowspan="3">
+                    <button type="button" class="btn btn-success" ng-click="list.onRemove({ index: $index })">
+                        Don't want this one!
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td><strong>Short Name</strong>: {{item.short_name}}</td>
+            </tr>
+            <tr>
+                <td><strong>Description</strong>: {{item.description}}</td>
+            </tr>
+        </table>
+    </li>
+</ul>
+<span class="error" ng-if="list.emptyList()">Nothing Found!</span>
