--- a/assignment3-starter-code/index.html
+++ b/assignment3-starter-code/index.html
@@ -1,35 +1,28 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<title>Narrow Down Your Menu Choice</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="styles/bootstrap.min.css">
-		<link rel="stylesheet" href="styles/styles.css">
-		<script src="angular.min.js"></script>
-		<script src="app.js"></script>
-	</head>
-	<body>
-		<div class="container" ng-app="NarrowItDownApp">
-			<h1>Narrow Down Your Chinese Menu Choice</h1>
-			<div ng-controller="NarrowItDownController as menuCtrl">
-				<div class="form-group">
-					<input type="text" placeholder="search term" class="form-control" ng-model="menuCtrl.menuItem">
-				</div>
-				<div class="form-group narrow-button">
-					<button class="btn btn-primary" ng-click="menuCtrl.checkIsInMenu()">Narrow It Down For Me!</button>
-				</div>
-				<br/><br/><br/><br/>
-				<ul>
-					<li ng-repeat="item in menuCtrl.foundItems track by $index">
-						{{ item }}
-					</li>
-				</ul>
-				<hr/>
-				<!-- found-items should be implemented as a component -->
+<head>
+    <title>Narrow Down Your Menu Choice</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <script src="angular.min.js" charset="utf-8"></script>
+    <script src="app.js" charset="utf-8"></script>
+</head>
+<body ng-app="NarrowItDownApp">
+    <div class="container" ng-controller="NarrowItDownController as menu">
+        <h1>Narrow Down Your Chinese Menu Choice</h1>
 
-				 <ol>
-        			<list-item ng-repeat="item in menuCtrl.foundItems track by $index"></list-item>
-      			</ol>
-				<found-items found-items="menuCtrl.found" on-remove="menuCtrl.removeItem(index)"></found-items>		</div>
-	</body>
+        <div class="form-group">
+            <input type="text" placeholder="search term" class="form-control" ng-model="menu.searchTerm">
+        </div>
+        <div class="form-group narrow-button">
+            <button class="btn btn-primary" ng-click="menu.narrowItDown()">Narrow It Down For Me!</button>
+        </div>
+
+        <div class="clearfix"></div>
+        <!-- found-items should be implemented as a component -->
+        <found-items found-items="menu.found" on-remove="menu.removeItem(index)"></found-items>
+    </div>
+
+</body>
 </html>
