--- a/assignment4-starter-code/index.html
+++ b/assignment4-starter-code/index.html
@@ -29,7 +29,7 @@
   <body ng-app='MenuApp'>
   
 			<h1>
-				Welcome to our Restorant
+				Welcome to our Restaurant
 			</h1>
 						
 			<ui-view></ui-view>
