--- a/assignment4-starter-code/index.html
+++ b/assignment4-starter-code/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
     <title>Restaurant list</title>
 	
 	<!-- Libraries -->
@@ -27,13 +28,15 @@
 	
   </head>
   <body ng-app='MenuApp'>
-  
+	
+	<div class="container">
+		<div class="col-md-8 col-md-offset-2">
 			<h1>
 				Welcome to our Restaurant
 			</h1>
 						
 			<ui-view></ui-view>
-				
-	
+		</div>	
+	</div>
   </body>
 </html>
